# backup-cli

./: .gitignore  pyproject.toml
src/: directory_tree.py  logger.py  main.py  seed.py  type_definitions.py
src/backup/: backup.py  backup_factory.py  full_backup.py  incremental_backup.py  mirror_backup.py
src/tree_generator/: random_tree_generator.py
